<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/option_menu_bottom_sheet_slider_indicator"
        style="@style/SliderIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_sheet_menu_option_label"
        style="@style/Widget.Totalfit.TextView.OptionsBottomSheet.Item"
        android:layout_marginTop="@dimen/option_bottom_sheet_textview_margintop"
        android:text="@string/bottom_sheet_menu_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/option_menu_bottom_sheet_slider_indicator" />

    <TextView
        android:id="@+id/bottom_sheet_menu_option_gallery"
        style="@style/Widget.Totalfit.TextView.OptionsBottomSheet.Item"
        android:layout_marginTop="@dimen/option_bottom_sheet_textview_margintop"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/bottom_navigation_option_gallery"
        app:drawableStartCompat="@drawable/ic_photo_library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_menu_option_label" />

    <TextView
        android:id="@+id/bottom_sheet_menu_option_web"
        style="@style/Widget.Totalfit.TextView.OptionsBottomSheet.Item"
        android:layout_marginTop="@dimen/border_margin"
        android:layout_marginBottom="@dimen/border_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/bottom_navigation_option_internet"
        app:drawableStartCompat="@drawable/ic_insert_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_menu_option_gallery"
        app:layout_constraintVertical_bias="0" />


</androidx.constraintlayout.widget.ConstraintLayout>