<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.treinos.NewTreinoFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_treino_input_layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_layout_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_treino_input_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fragment_new_treino_name_hint"
            android:inputType="textCapSentences"
            android:textAppearance="?attr/textAppearanceBody2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_treino_input_layout_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_layout_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_treino_input_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_treino_input_edittext_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fragment_new_treino_description_hint"
            android:inputType="textMultiLine"
            android:textAppearance="?attr/textAppearanceBody2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_treino_input_layout_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_layout_margin"
        app:endIconCheckable="true"
        app:endIconContentDescription="@string/input_layout_date_end_icon_content_description"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_treino_input_layout_description"
        app:placeholderText="27/01/2023">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_treino_input_edittext_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fragment_new_treino_date_hint"
            android:inputType="date"
            android:textAppearance="?attr/textAppearanceBody2" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/exercicios_list_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_layout_margin"
        android:text="@string/fragment_new_exercicio_list_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_treino_input_layout_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_new_treino_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_layout_margin"
        android:layout_marginEnd="@dimen/default_layout_margin"
        android:layout_marginBottom="@dimen/default_layout_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercicios_list_label"
        tools:listitem="@layout/exercicio_in_treino_item" />


</androidx.constraintlayout.widget.ConstraintLayout>